2012-05-08  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/tokens.boot: Export char.  Do not rename maxIndex.
	* lisp/core.lisp.in (maxIndex): Define and export.
	* interp/bootlex.lisp: Adjust.
	* interp/parsing.lisp: Likewise.
	* interp/macros.lisp: Likewise.
	(DROPTRAILINGBLANKS): Remove.
	(BLANKP): Likewise.
	(NONBLANKLOC): Likewise.
	* interp/io.boot (trimTrailingBlank): New.
	(firstNonblankCharPosition): Likewise.
	* interp/preparse.lisp: Use them. Adjust.
	* interp/sys-macros.lisp (char): Remove.
	* interp/vmlisp.lisp (MAXINDEX): Likewise.
	* interp/br-search.boot (pmTransFilter): Fix bogus uses of char.
	* interp/debug.lisp: Likewise.
	* interp/g-util.boot: Likewise.
	* interp/ht-root.boot: Likewise.
	* interp/i-output.boot: Likewise.
	* interp/i-syscmd.boot: Likewise.

2012-05-07  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad.lisp (INIT-BOOT/SPAD-READER): Don't set FILE-CLOSED.
	(SPAD): Tidy.
	* interp/spad-parser.boot (parseSpadFile): Do not test for *EOF*
	or FILE-CLOSED.
	* interp/preparse.lisp (INITIALIZED-PREPARSE): Use readLine.
	(preparseReadLine1): Likewise.
	* interp/parsing.lisp (FILE-CLOSED): Remove.
	(GET-A-LINE): Likewise.
	(CURRENT-FRAGMENT): Likewise.
	(INPUT-CLEAR): Likewise.
	(READ-A-LINE): Likewise.
	(IOSTREAMS-CLEAR): Don't set FILE-CLOSED.
	(IOCLEAR): Don't call INPUT-CLEAR.

2012-05-07  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/vmlisp.lisp (ioTerminal?): Rename form IS-CONSOLE.
	* interp/bootlex.lisp: Adjust.
	* interp/diagnostics.boot: Likewise.
	* interp/macros.lisp: Likewise.
	* interp/msgdb.boot: Likewise.
	* interp/parsing.lisp: Likewise.
	* interp/preparse.lisp: Likewise.
	* interp/server.boot: Likewise.

2012-05-07  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp (SKIP-IFBLOCK): Move to spad-parser.boot.
	Renamed skipIfBlock.
	(SKIP-IF-BLOCK): Move to spad-parser.boot.  Renamed skipToEndif.
	(PREPARSEREADLINE): Move to spad-parser.boot.  Renamed
	preparseReadLine.
